[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "fkit"
version = "1.0.0"
authors = [
  { name="wcfrobert", email="wcfrobert@gmail.com" },
]
description = "Fiber Kit - FIber Section Analysis in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/fkit"
"Bug Tracker" = "https://github.com/wcfrobert/fkit/issues"