[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fiberkit/__init__.py"

[project]
name = "fiberkit"
dynamic = ["version"]
description = "Fiber Kit - moment curvature analysis for reinforced concrete, steel, wood, etc."
authors = [
  { name="wcfrobert", email="temprobertdev@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy~=2.0",
    "pandas~=2.0",
    "matplotlib~=3.7",
    "plotly~=6.0"
]
keywords = [
    "structural engineering",
    "concrete",
    "steel",
    "timber",
    "reinforced concrete",
    "section analysis",
    "moment curvature",
    "PM Interaction",
    "fiber",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/fkit"
"Bug Tracker" = "https://github.com/wcfrobert/fkit/issues"